--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
     var(--bg-soft-blue)
   );
   background-repeat: no-repeat;
+  box-sizing: border-box;
   height: 100vh;
   padding: 7em 1em;
 }
@@ -33,8 +34,10 @@ body {
   color: var(--dark-grayish-blue);
   font-size: 1.2rem;
 }
-
-.main-image img {
+.desktop img {
+  display: none;
+}
+.mobile img {
   display: block;
   margin: -18em auto 5em;
 }
@@ -88,6 +91,36 @@ body {
   font-weight: 700;
   font-size: 1.3rem;
 }
+
+@media (min-width: 1440px) {
+  section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60vw;
+    margin: 0 auto;
+    background-image: url("../images/illustration-woman-online-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: -5em center;
+  }
+  .mobile img {
+    /* visibility: hidden; */
+    display: none;
+  }
+
+  .desktop img {
+    position: relative;
+    display: block;
+    margin-left: -40em;
+  }
+
+  .main-accordion h1 {
+    text-align: left;
+  }
+
+
+
+  
 
 .attribution {
   position: absolute;
