--- a/main.css
+++ b/main.css
@@ -27,7 +27,8 @@ body {
   background-color: #fff;
   border-radius: 30px;
   padding: 9em 1em 5em;
-  margin-top: 20%;
+  top: 10%;
+  height: 50vh;
 }
 
 .main-accordion {
@@ -93,34 +94,64 @@ body {
 }
 
 @media (min-width: 1440px) {
+  .main {
+      padding-right: 13em;
+  }
+
+  .main-accordion {
+    width: 40%;
+  }
+
+  .main-answer, .main-question { 
+  padding: 0;
+    } 
+
   section {
     display: flex;
+    /*  */
+    position: relative;
     justify-content: space-between;
     align-items: center;
     width: 60vw;
     margin: 0 auto;
-    background-image: url("../images/illustration-woman-online-desktop.svg");
+    background-image: url("../images/bg-pattern-desktop.svg");
+    background-size: 120%;
     background-repeat: no-repeat;
-    background-position: -5em center;
+    background-position: 400% 65%;
   }
   .mobile img {
     /* visibility: hidden; */
     display: none;
   }
 
+  
+
   .desktop img {
-    position: relative;
+    position: absolute;
     display: block;
-    margin-left: -40em;
+
   }
+
+  .main-image_woman {
+    /* */
+        position: absolute;
+        top: 190px;
+        left: -80px;
+        /*  */
+        clip-path: inset(0 0 0 80px);
+  }
+
+  .main-image_box {
+    /*  */
+    position: absolute;
+    top: 280px;
+    left: -80px;
+  }
+
 
   .main-accordion h1 {
     text-align: left;
   }
-
-
-
-  
 
 .attribution {
   position: absolute;
